<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:screenOrientation="landscape"
    android:configChanges="keyboardHidden|orientation|screenSize"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Igranje"
    android:background="@drawable/stolkarte">

    <bela.bela.player.PlayerButton
        android:id="@+id/K1"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:visibility="invisible"/>
    <bela.bela.player.PlayerButton
        android:id="@+id/K2"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/K1"
        android:adjustViewBounds="true"
        android:visibility="invisible"/>
    <bela.bela.player.PlayerButton
        android:id="@+id/K3"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/K2"
        android:adjustViewBounds="true"
        android:visibility="invisible"/>
    <bela.bela.player.PlayerButton
        android:id="@+id/K4"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/K3"
        android:adjustViewBounds="true"
        android:visibility="invisible"/>
    <bela.bela.player.PlayerButton
        android:id="@+id/K5"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/K4"
        android:adjustViewBounds="true"
        android:visibility="invisible"/>
    <bela.bela.player.PlayerButton
        android:id="@+id/K6"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/K5"
        android:adjustViewBounds="true"
        android:visibility="invisible"/>
    <bela.bela.player.PlayerButton
        android:id="@+id/K7"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/K6"
        android:adjustViewBounds="true"
        android:visibility="invisible"/>
    <bela.bela.player.PlayerButton
        android:id="@+id/K8"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/K7"
        android:visibility="invisible"/>
    <TextView android:id="@+id/p1name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/K4"
        android:text="@string/player1"
        android:textSize="12sp"/>
    <bela.bela.game.CardImageView android:id="@+id/p1b"
        android:layout_width="40sp"
        android:layout_height="60sp"
        android:layout_above="@id/p1name"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/p1b"/>
    <bela.bela.game.CardImageView android:id="@+id/p2b"
        android:layout_width="40sp"
        android:layout_height="60sp"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/p1b"
        android:contentDescription="@string/p2b"/>
    <bela.bela.game.CardImageView android:id="@+id/p3b"
        android:layout_width="40sp"
        android:layout_height="60sp"
        android:layout_above="@id/p1b"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/p3b"/>
    <bela.bela.game.CardImageView android:id="@+id/p4b"
        android:layout_width="40sp"
        android:layout_height="60sp"
        android:layout_toEndOf="@id/p1name"
        android:layout_centerVertical="true"
        android:contentDescription="@string/p4b"/>
    <TextView android:id="@+id/p2name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/p2b"
        android:text="@string/player2"
        android:textSize="12sp" />
    <TextView android:id="@+id/p3name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/p3b"
        android:text="@string/player3"
        android:textSize="12sp"/>
    <TextView android:id="@+id/p4name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/p4b"
        android:text="@string/player4"
        android:fromDegrees="0"
        android:toDegrees="-90"
        android:pivotX="50%"
        android:duration="0"
        android:textSize="12sp"/>
    <TextView android:id="@+id/mi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mi"/>
    <TextView android:id="@+id/vi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vi"
        android:layout_toEndOf="@id/mi"/>
    <TextView android:id="@+id/miscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mi"/>
    <TextView android:id="@+id/viscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vi"
        android:layout_toEndOf="@id/mi" />
    <TextView android:id="@+id/mizvanja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viscore" />
    <TextView android:id="@+id/vizvanja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viscore"
        android:layout_toEndOf="@id/mi"/>
    <TextView android:id="@+id/vibodovi"
        android:layout_below="@id/vizvanja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/mi"/>
    <TextView android:id="@+id/mibodovi"
        android:layout_below="@id/mizvanja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/mi"/>
    <bela.bela.game.AdutImageView android:id="@+id/adutzir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/p1name"
        android:layout_toEndOf="@id/p2name"
        android:background="@drawable/ziradut"
        android:visibility="invisible"/>
    <bela.bela.game.AdutImageView android:id="@+id/adutherc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/p1name"
        android:layout_toEndOf="@id/adutzir"
        android:background="@drawable/hercadut"
        android:visibility="invisible"/>
    <bela.bela.game.AdutImageView android:id="@+id/adutbundeva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/p1name"
        android:background="@drawable/bucaadut"
        android:layout_toEndOf="@id/adutherc"
        android:visibility="invisible"/>
    <bela.bela.game.AdutImageView android:id="@+id/adutzelena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/p1name"
        android:layout_toEndOf="@id/adutbundeva"
        android:background="@drawable/zelenaadut"
        android:visibility="invisible"/>
    <bela.bela.game.AdutImageView android:id="@+id/currentadut"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"/>
    <Button android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/next"/>

</RelativeLayout>
